@@ -15,7 +15,7 @@ dependencies {
 	implementation "org.eclipse.jgit:org.eclipse.jgit:${VER_JGIT}"
 	implementation "com.googlecode.concurrent-trees:concurrent-trees:2.6.1"
 	// used for xml parsing in EclipseFormatter
-	implementation "org.codehaus.groovy:groovy-xml:3.0.9"
+	implementation "org.codehaus.groovy:groovy-xml:3.0.10"
 
 	// testing
 	testImplementation project(':testlib')
@@ -27,4 +27,10 @@ dependencies {
 // we'll hold the core lib to a high standard
 spotbugs { reportLevel = 'low' } // low|medium|high (low = sensitive to even minor mistakes)
 
-test { useJUnitPlatform() }
+test {
+	useJUnitPlatform()
+	if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
+		// needed for EclipseCdtFormatterStepTest
+		jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+	}
+}
